# NosoWalletCPP

./: .gitignore  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  Communication.h  DataStructures.h  MainFrame.h  NosoWalletCPP.cpp  NosoWalletCPP.sln  NosoWalletCPP.vcxproj  NosoWalletCPP.vcxproj.filters  README.md  build_with_cmake.sh  build_with_cmake_vcpkg.sh  cpp.hint  release-notes.md  vcpkg.json  walletcpp.pkw
.github/workflows/: build-test.yml  main.yml
Documentation/: Index.md
data/: sumary.psk  wallet.pkw
utils/minizip/data/: sumary.psk
